--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "build:href": "ng build --base-href ./",
     "delete:docs": "del docs",
-    "copy:dist": "robocopy dist\\countryApp\\browser docs /e",
+    "copy:dist": "robocopy dist\\country-app\\browser docs /e",
     "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
