--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build:href": "ng build --base-href ./",
-    "delete:docs": "del docs",
+    "delete:docs": "rmdir /s /q docs",
     "copy:dist": "robocopy dist\\country-app\\browser docs /e",
     "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
     "watch": "ng build --watch --configuration development",
